Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.1.2, 10.2.0, 10.3.0
-
Windows 64-bit
Description
MDEV-7108 changed the type of the variable srv_fatal_semaphore_wait_threshold from ulint to ulong but failed to adjust the assignments accordingly.
In MariaDB 10.2, some wrong code reads like this:
my_atomic_addlint(
|
&srv_fatal_semaphore_wait_threshold,
|
SRV_SEMAPHORE_WAIT_EXTENSION);
|
In MariaDB 10.1, it reads like this:
os_increment_counter_by_amount(
|
server_mutex,
|
srv_fatal_semaphore_wait_threshold,
|
SRV_SEMAPHORE_WAIT_EXTENSION);
|
Both of these forms expect the data type to be ulint.
As far as I understand, on most platforms sizeof(ulong)==sizeof(ulint) would hold. Most notably, the sizes are different on 64-bit WIndows (4 and 8 bytes).
The problem was found by wlad by compiling 10.3 cmake -DWITH_ASAN and running tests on Windows.
Attachments
Issue Links
- is caused by
-
MDEV-7108 Made long semaphore wait timeout configurable
-
- Closed
-
thiru, please fix this in 10.1. Maybe we can simply make the variable uint and adjust the primitives accordingly.