MDEV-15295 Type mismatch for srv_fatal_semaphore_wait_threshold